# transactions/src/main/java/com/project/transactions/delegate/TransactionDelegate.java
@@ -1,17 +1,17 @@
 package com.project.transactions.delegate;
 
 import com.project.transactions.api.TransactionsApiDelegate;
-import com.project.transactions.model.TransactionDTO;
+/*import com.project.transactions.model.TransactionDTO;
 import com.project.transactions.service.TransactionService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.ResponseEntity;*/
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 
 @Service
 public class TransactionDelegate implements TransactionsApiDelegate {
-    private final TransactionService transactionService;
+    /*private final TransactionService transactionService;
 
     @Autowired
     public TransactionDelegate(TransactionService transactionService) {
@@ -36,5 +36,5 @@ public class TransactionDelegate implements TransactionsApiDelegate {
     @Override
     public ResponseEntity<TransactionDTO> updateTransaction(String id, TransactionDTO transactionDTO) {
         return ResponseEntity.ok(transactionService.update(id, transactionDTO));
-    }
+    }*/
 }
